--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,7 +1,7 @@
 name: Generate pacman animation
 
 on:
-  schedule:
+  schedule: # execute every 12 hours
     - cron: "* */12 * * *"
 
   workflow_dispatch:
